--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
     "@react-buddy/ide-toolbox": "^2.2.0",
@@ -46,8 +47,9 @@
     "react-hook-form": "^7.31.3",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^5.3.3",
-    "react-router-dom": "5.3.3",
+    "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
     "recharts": "^2.1.10",
@@ -96,5 +98,8 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/recharts": "^1.8.4",
     "@types/styled-components": "^5.1.25"
+  },
+  "resolutions": {
+    "@types/react": "^16.8.10"
   }
 }
