--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "emailjs-com": "^3.2.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "firebase": "^9.8.4",
+    "firebase-tools": "9.7.0",
     "fontawesome": "^5.6.3",
     "gsap": "^3.10.4",
     "hoist-non-react-statics": "^3.3.2",
