--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^16.11.38",
     "@types/react": "17",
     "@types/react-dom": "17",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-redux": "^7.1.24",
     "@types/react-transition-group": "^4.4.4",
     "@types/redux-thunk": "^2.1.0",
@@ -45,6 +46,7 @@
     "mui": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.31.3",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
